--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,10 @@ name: Release & Publish
 
 on:
   push:
-    branches:
-      - main 
+    tags:
+      - 'v*'
+    branches: 
+      - main
 
 jobs:
   release:
