--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
     "name": "ja-malta-oidc",
     "version": "0.1.0",
     "scripts": {
-        "build": "npm run build:cjs && npm run build:esm && npm run build:umd && npm run build:types",
+        "build": "npm run build:cjs && npm run build:esm && npm run build:types",
         "build:cjs": "node tools/cleanup cjs && tsc -p config/tsconfig.cjs.json",
         "build:esm": "node tools/cleanup esm && tsc -p config/tsconfig.esm.json",
-        "build:umd": "node tools/cleanup umd && webpack --config config/webpack.config.js",
         "build:types": "node tools/cleanup types && tsc -p config/tsconfig.types.json"
     },
     "publishConfig": {
         "access": "public"
     },
-    "files": ["out"],
+    "files": ["dist"],
     "keywords": [
         "ja",
         "jamalta",
