--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,8 +11,9 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: Get current package version
-        uses: martinbeentjes/npm-get-version-action@v1.2.3
+      - name: get-npm-version
+        id: package-version
+        uses: martinbeentjes/npm-get-version-action@main
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Create Release
