--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "build:cjs": "node tools/cleanup cjs && tsc -p config/tsconfig.cjs.json",
         "build:esm": "node tools/cleanup esm && tsc -p config/tsconfig.esm.json",
         "build:types": "node tools/cleanup types && tsc -p config/tsconfig.types.json",
-        "dev-start": "node_modules/.bin/ts-node -r dotenv/config src/index.ts"
+        "dev-start": "node_modules/.bin/ts-node -r dotenv/config src/runner.ts"
     },
     "publishConfig": {
         "access": "public"
