--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ja-malta-oidc",
-    "version": "0.2.0",
+    "version": "0.9.0",
     "scripts": {
         "build": "npm run build:cjs && npm run build:esm && npm run build:types",
         "build:cjs": "node tools/cleanup cjs && tsc -p config/tsconfig.cjs.json",
@@ -11,7 +11,9 @@
     "publishConfig": {
         "access": "public"
     },
-    "files": ["dist"],
+    "files": [
+        "dist"
+    ],
     "keywords": [
         "ja",
         "jamalta",
@@ -44,6 +46,6 @@
         "@types/node": "^17.0.35",
         "cookie-parser": "^1.4.6",
         "ts-node": "^10.7.0",
-        "typescript": "^4.6.4"
+        "typescript": "^4.7.2"
     }
 }
