--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.package-version.outputs.current-version }}
-          release_name: JAYE OIDC Relaying Party Client
+          release_name: JAYE OIDC Relying Party Client v${{ steps.package-version.outputs.current-version }}
           draft: false
           prerelease: false
 
