--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
     "name": "jamalta-oidc-relying",
-    "version": "0.9.2",
+    "version": "0.9.3",
+    "main": "dist/cjs/index.js",
+    "module": "dist/esm/index.js",
+    "umd:main": "dist/umd/index.js",
+    "types": "dist/types/index.d.js",
     "scripts": {
         "build": "npm run build:cjs && npm run build:esm && npm run build:types",
         "build:cjs": "node tools/cleanup cjs && tsc -p config/tsconfig.cjs.json",
