--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "jamalta-oidc-relying",
-    "version": "0.9.3",
+    "version": "0.9.21",
+    "description": "JA Malta OIDC Client for external/internal login-as implementation",
     "main": "dist/cjs/index.js",
     "module": "dist/esm/index.js",
     "umd:main": "dist/umd/index.js",
