--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "jamalta-oidc-relying",
-    "version": "0.9.21",
+    "name": "jamalta-oidc-client",
+    "version": "0.9.3",
     "description": "JA Malta OIDC Client for external/internal login-as implementation",
     "main": "dist/cjs/index.js",
     "module": "dist/esm/index.js",
