--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jamalta-oidc-client",
-    "version": "0.9.4",
+    "version": "0.9.5",
     "description": "JA Malta OIDC Client for external/internal login-as implementation",
     "main": "dist/cjs/index.js",
     "module": "dist/esm/index.js",
@@ -43,7 +43,8 @@
     "dependencies": {
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
-        "openid-client": "^5.1.6"
+        "openid-client": "^5.1.6",
+        "typedoc": "^0.22.17"
     },
     "devDependencies": {
         "@types/cookie-parser": "^1.4.3",
