--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
     "name": "jamalta-oidc-client",
-    "version": "0.9.5",
+    "version": "0.9.6",
     "description": "JA Malta OIDC Client for external/internal login-as implementation",
     "main": "dist/cjs/index.js",
     "module": "dist/esm/index.js",
     "umd:main": "dist/umd/index.js",
     "types": "dist/types/index.d.js",
     "scripts": {
-        "build": "npm run build:cjs && npm run build:esm && npm run build:types",
+        "build": "npm run build:cjs && npm run build:esm && npm run build:types && npm run build:docs",
         "build:cjs": "node tools/cleanup cjs && tsc -p config/tsconfig.cjs.json",
         "build:esm": "node tools/cleanup esm && tsc -p config/tsconfig.esm.json",
         "build:types": "node tools/cleanup types && tsc -p config/tsconfig.types.json",
+        "build:docs": "npx typedoc src/index.ts",
         "dev-start": "node_modules/.bin/ts-node -r dotenv/config src/runner.ts"
     },
     "publishConfig": {
