--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,7 +48,7 @@ jobs:
         run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_SECRET }}
-      - name: Deploy 🚀
+      - name: Deploy Docs
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
           branch: gh-pages
